--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Nahashon Ndirangu <nahashon.ndirangu@outlook.com>
+Devonne Muriithi <wambuilucie7@gmail.com>
